k8s-yamls-master/k8s-yamls-master/live/All-Clusters-BASE-REQUIRED/monitoring/custom/caprod/ingress-grafana.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # nginx.ingress.kubernetes.io/service-upstream: "true"
    # nginx.ingress.kubernetes.io/upstream-vhost: grafana.monitoring.svc.cluster.local
  name: resources-grafana-tls
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
  - host: k8caprod.medimpact.com
    http:
      paths:
      - pathType: Prefix
        path: /resources/?(.*)
        backend:
          service:
            name: grafana
            port: 
              number: 3000
  tls:
  - hosts:
    - k8caprod.medimpact.com
