k8s-yamls-master/k8s-yamls-master/live/All-Clusters-BASE-REQUIRED/monitoring/custom/caprod/ingress-prometheus.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/auth-realm: Authentication Required - admin
    nginx.ingress.kubernetes.io/auth-secret: prometheus-basic-auth
    nginx.ingress.kubernetes.io/auth-type: basic
    # nginx.ingress.kubernetes.io/service-upstream: "true"
    # nginx.ingress.kubernetes.io/upstream-vhost: prometheus-k8s.monitoring.svc.cluster.local
  name: resources-prometheus-tls
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
  - host: k8caprod.medimpact.com
    http:
      paths:
      - pathType: Prefix
        path: /prometheus/?(.*)
        backend:
          service:
            name: prometheus-k8s
            port:
              number: 9090
  tls:
  - hosts:
    - k8caprod.medimpact.com
